--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "countdown": "^2.6.0",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-countdown": "^2.3.2",
     "react-dom": "18.2.0",
-    "react-spring": "^9.5.2"
+    "react-spring": "^9.5.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
